CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- FLUID now provides unlimited undo/redo support.
	- FLUID now provides an option to choose which scheme
	  (default, none, plastic) to display.
	- Fixed scheme background issue with windows in FLUID.
	- In FLUID, new widgets are now created with the ideal
	  size by default, and menu bars are positioned to use
	  the entire width of the window.
	- Added Layout/Widget Size submenu to select default
	  label and text size (Tiny, Small, and Normal).
	- Added Edit/Duplicate command to FLUID to duplicate the
	  current selection.
	- FLUID now tracks the current state of the widget bin
	  and overlays.
	- Now fill the widget image paths with relative
	  filenames.
	- Fixed frame drawing of Fl_Text_Display (STR #762)
	- Fl_Clock_Output::value() did not return the previously
	  set value (STR #748)
	- Added comment type to FLUID. This is useful for
	  generating copyright notices in the source and header
	  files.
	- Fl_Valuator would not format text output with decimal 
	  point when the step value was fractional, but above 1.
	- fl_filename_relative() didn't compare drive letters in
	  a case-insensitive way (STR #741)
	- Fixed menu item width calculations with symbols (STR
	  #740)
	- The keyboard shortcut handling code did not handle
	  8-bit characters properly (STR #731)
	- Fl_JPEG_Image could still crash an app with a corrupt
	  JPEG file (STR #739)
	- Using the layout alignment controls on a menu widget
	  would cause FLUID to crash (STR #742)
	- Added QNX bug workaround for menu handling (STR #704)
	- Added Greg Ercolano's simple Fl_Input_Choice widget
	  which is a combination of the Fl_Input and
	  Fl_Menu_Button widgets (STR #650)
	- Fl_Multiline_Input now scrolls the full height of the
	  widget instead of 5 lines when the user presses PageUp
	  or PageDown (STR #727)
	- CMake build fixes (STR #724)
	- Fl_Browser::swap() didn't handle redraws properly when