@@ -869,13 +869,13 @@ static void cb(Fl_Widget *, void *v) {
 
 Fl_Menu_Item New_Menu[] = {
 {"Code",0,0,0,FL_SUBMENU},
-  {"Function/Method...",0,cb,(void*)&Fl_Function_type},
-  {"Code...",0,cb,(void*)&Fl_Code_type},
-  {"Code Block...",0,cb,(void*)&Fl_CodeBlock_type},
-  {"Declaration...",0,cb,(void*)&Fl_Decl_type},
-  {"Declaration Block...",0,cb,(void*)&Fl_DeclBlock_type},
-  {"Class...",0,cb,(void*)&Fl_Class_type},
-  {"Comment...",0,cb,(void*)&Fl_Comment_type},
+  {"Function/Method",0,cb,(void*)&Fl_Function_type},
+  {"Code",0,cb,(void*)&Fl_Code_type},
+  {"Code Block",0,cb,(void*)&Fl_CodeBlock_type},
+  {"Declaration",0,cb,(void*)&Fl_Decl_type},
+  {"Declaration Block",0,cb,(void*)&Fl_DeclBlock_type},
+  {"Class",0,cb,(void*)&Fl_Class_type},
+  {"Comment",0,cb,(void*)&Fl_Comment_type},
 {0},
 {"Group",0,0,0,FL_SUBMENU},
   {0,0,cb,(void*)&Fl_Window_type},
