@@ -631,12 +631,12 @@ Fl_Menu_Item Main_Menu[] = {
   {"&Redo", FL_CTRL+FL_SHIFT+'z', redo_cb, 0, FL_MENU_DIVIDER},
   {"C&ut", FL_CTRL+'x', cut_cb},
   {"&Copy", FL_CTRL+'c', copy_cb},
-  {"&Delete", FL_Delete, delete_cb},
-  {"Dup&licate", FL_CTRL+'d', duplicate_cb},
   {"&Paste", FL_CTRL+'v', paste_cb},
+  {"Dup&licate", FL_CTRL+'u', duplicate_cb},
+  {"&Delete", FL_Delete, delete_cb, 0, FL_MENU_DIVIDER},
   {"Select &All", FL_CTRL+'a', select_all_cb},
   {"Select &None", FL_CTRL+FL_SHIFT+'a', select_none_cb, 0, FL_MENU_DIVIDER},
-  {"&Show Widget Panel...", FL_F+1, openwidget_cb},
+  {"Pr&operties...", FL_F+1, openwidget_cb},
   {"&Sort",0,sort_cb},
   {"&Earlier", FL_F+2, earlier_cb},
   {"&Later", FL_F+3, later_cb},
@@ -675,7 +675,7 @@ Fl_Menu_Item Main_Menu[] = {
     {"&Small",FL_ALT+'2',(Fl_Callback *)widget_size_cb,(void*)11,FL_MENU_RADIO,FL_NORMAL_LABEL,FL_HELVETICA,11},
     {"&Normal",FL_ALT+'3',(Fl_Callback *)widget_size_cb,(void*)14,FL_MENU_RADIO|FL_MENU_VALUE},
     {0},
-  {"&Grid...",FL_ALT+'g',show_grid_cb},
+  {"&Grid...",FL_CTRL+'g',show_grid_cb},
   {0},
 {"&Shell",0,0,0,FL_SUBMENU},
   {"Execute &Command...",FL_ALT+'x',(Fl_Callback *)show_shell_window},
